<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_ft_sensor_hardware_zombie</name>
  <version>0.0.0</version>
  <description>FT</description>
  <maintainer email="youjianmin123@qq.com">yjm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>

  <depend>pluginlib</depend>
  <depend>robotiq_ft_sensor_interfaces</depend>

  <depend>rclcpp</depend>

  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
